[package]
name = "rustsat-esa"
version = "1.0.0"
edition = "2021"
authors = ["RustSat-ESA Contributors"]
description = "SpaceCAN-compatible CubeSat communication protocol stack for ESA missions"
license = "MIT"
repository = "https://github.com/your-username/rustsat-esa"
homepage = "https://github.com/your-username/rustsat-esa"
documentation = "https://docs.rs/rustsat-esa"
keywords = ["cubesat", "space", "communication", "protocol", "esa"]
categories = ["aerospace", "embedded", "network-programming", "science"]
readme = "README.md"
rust-version = "1.70"

[lib]
name = "rustsat_esa"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"
rand = "0.8"
crc32fast = "1.3"
aes = "0.8"
sha2 = "0.10"
hmac = "0.12"
reed-solomon-erasure = "6.0"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
bincode = "1.3"
flate2 = "1.0"
hex = "0.4"
cbc = "0.1"
clap = { version = "4.0", features = ["derive"] }
tui = "0.19"
crossterm = "0.27"
plotters = "0.3"
warp = "0.3"
futures = "0.3"
lazy_static = "1.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
tempfile = "3.0"
mockall = "0.11"

[features]
default = ["std"]
std = []
no-std = []
simulation = []
benchmarks = []

[[example]]
name = "comprehensive_demo"
path = "examples/comprehensive_demo.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[bench]]
name = "protocol_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
